syntax = "proto3";

option go_package = "go_grpc_hello/hello";

package go_grpc_hello;

service Greeter {
}

message HelloRequest{
    string name = 1;
}

message HelloResponse{
    string message = 1;
}